tests/neg-macros/newClassExtendsOnlyTrait/Test_2.scala
//> using options -experimental

def test: Foo = makeClass("foo") // error
